--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "node": "^19.6.1",
     "nodemon": "^2.0.21",
     "typescript": "^4.9.5"
   }
