--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "tsc; node ./dist/app.js",
     "dev": "concurrently \"tsc -w\" \"nodemon ./dist/app.js\"",
     "build": "tsc",
-    "lint": "eslint --ext .ts ./src"
+    "lint": "eslint --fix"
   },
   "author": "Sebastián Gámez Ariza (The-Cracker)",
   "license": "ISC",
@@ -17,11 +17,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.2.0",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/sequelize": "^4.28.14",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "concurrently": "^7.6.0",
