--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "tsc; node ./dist/app.js",
     "dev": "concurrently \"tsc -w\" \"nodemon ./dist/app.js\"",
     "build": "tsc",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix src"
   },
   "author": "Sebastián Gámez Ariza (The-Cracker)",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.8.4",
     "mysql2": "^3.2.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
@@ -26,15 +27,10 @@
     "@types/express": "^4.17.17",
     "@types/sequelize": "^4.28.14",
     "@types/typescript": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "concurrently": "^7.6.0",
-    "eslint": "^8.36.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
     "node": "^19.6.1",
     "nodemon": "^2.0.21",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   }
 }
