--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/sequelize": "^4.28.14",
     "@types/typescript": "^2.0.0",
     "concurrently": "^7.6.0",
