--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc; node ./dist/app.js",
     "dev": "concurrently \"tsc -w\" \"nodemon ./dist/app.js\"",
-    "build": "tsc",
-    "lint": "eslint --fix src"
+    "build": "tsc"
   },
   "author": "Sebastián Gámez Ariza (The-Cracker)",
   "license": "ISC",
